#58 refactor cli commands (#65)
* refactored binaries

* Got version command working

* All commands now use the same cli

* added test json files

* Commands now use REST and otto commands moved to ottoctl

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,7 @@ examples/heater/heater
 examples/mock/mock
 examples/logging_demo
 otto/otto
-otto
-cmd/otto/otto
+ottoctl/ottoctl
 mock/mock
 gpio/gpio
 station/station
@@ -30,3 +29,4 @@ debug*
 *.code-workspace
 *.log
 coverage.*
+__debug*
